--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -148,11 +148,11 @@
                         android:background="@color/hint_color" />
 
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/addressForm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/title"
@@ -227,22 +227,23 @@
 
 
                             </LinearLayout>
+
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
-                                <TextView
-                                    android:layout_marginTop="2dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="* This is a required field"
-                                    android:textSize="10sp"
-                                    android:layout_marginLeft="2dp"
-                                    android:textColor="@color/design_default_color_error"
-                                    android:id="@+id/titleError"
-                                    android:visibility="gone"/>
 
                                 <TextView
-                                    android:visibility="gone"
+                                    android:id="@+id/titleError"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginTop="2dp"
+                                    android:text="* This is a required field"
+                                    android:textColor="@color/design_default_color_error"
+                                    android:textSize="10sp"
+                                    android:visibility="gone" />
+
+                                <TextView
                                     android:id="@+id/nameError"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -251,7 +252,8 @@
                                     android:layout_marginTop="2dp"
                                     android:text="* This is a required field"
                                     android:textColor="@color/design_default_color_error"
-                                    android:textSize="10sp" />
+                                    android:textSize="10sp"
+                                    android:visibility="gone" />
                             </RelativeLayout>
 
                             <TextView
@@ -314,8 +316,6 @@
                             </LinearLayout>
 
 
-
-
                             <TextView
                                 android:id="@+id/phoneError"
                                 android:layout_width="wrap_content"
@@ -325,7 +325,7 @@
                                 android:text="* This is a required field"
                                 android:textColor="@color/design_default_color_error"
                                 android:textSize="10sp"
-                                android:visibility="gone"/>
+                                android:visibility="gone" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -577,11 +577,11 @@
 
 
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/billingAddressLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -635,6 +635,7 @@
                             android:text="@string/edit"
                             android:textColor="#3A5FD8"
                             android:textFontWeight="600" />
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -642,8 +643,6 @@
                             android:layout_marginVertical="14dp"
                             android:background="@color/hint_color" />
                     </LinearLayout>
-
-
 
 
                     <TextView
