--- a/app/src/main/res/layout/show_address_popup.xml
+++ b/app/src/main/res/layout/show_address_popup.xml
@@ -3,7 +3,9 @@
     android:layout_width="350dp"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal"
+    android:padding="20dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -28,7 +30,7 @@
         android:id="@+id/showAddressPopupRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
         </LinearLayout>
