--- a/app/src/main/res/layout/fragment_view_previous_shipment.xml
+++ b/app/src/main/res/layout/fragment_view_previous_shipment.xml
@@ -6,6 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Shipment.ShipmentFragment.ViewPreviousShipmentFragment">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +47,7 @@
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/returnedAndDiscardRecycler"
+                    android:id="@+id/previousShipmentRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="29dp"
@@ -54,5 +64,11 @@
 
 
     </LinearLayout>
+
+
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
