create shipment module done

--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -581,7 +581,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        >
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -627,6 +627,7 @@
 
 
                         <TextView
+                            android:visibility="gone"
                             android:id="@+id/billingEdit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
