--- a/app/src/main/res/layout/fragment_self_shopper.xml
+++ b/app/src/main/res/layout/fragment_self_shopper.xml
@@ -16,9 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-
-            android:paddingTop="20dp">
+            android:layout_marginTop="20dp"
+            android:gravity="center">
 
 
             <androidx.cardview.widget.CardView
@@ -33,24 +32,22 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:paddingHorizontal="20dp"
-                        android:paddingTop="20dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+
                         android:src="@drawable/ic_virtual_address" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
                         android:layout_marginTop="5dp"
-                        android:layout_marginBottom="20dp"
                         android:gravity="center"
                         android:text="Virtual\nAddress"
                         android:textColor="#86888C"
@@ -65,10 +62,10 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/selfShopperShippingCalculator"
-                android:layout_width="wrap_content"
+                android:layout_width="114dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
-                android:layout_marginLeft="14dp"
+                android:layout_marginLeft="20dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="4dp">
@@ -77,22 +74,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:paddingHorizontal="20dp"
-                        android:paddingTop="20dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+
                         android:src="@drawable/ic_shipping_calculator" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+
                         android:layout_marginTop="5dp"
-                        android:layout_marginBottom="20dp"
                         android:gravity="center"
                         android:text="Shipping\nCalculator"
                         android:textColor="#86888C"
@@ -101,15 +97,16 @@
 
                 </LinearLayout>
 
+
             </androidx.cardview.widget.CardView>
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/selfShopperFaqAndHelp"
-                android:layout_width="wrap_content"
+                android:layout_width="114dp"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5dp"
-                android:layout_marginLeft="14dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="10dp"
@@ -119,22 +116,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:paddingHorizontal="20dp"
-                        android:paddingTop="20dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+
                         android:src="@drawable/ic_help___faq" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
                         android:layout_marginTop="5dp"
-                        android:layout_marginBottom="20dp"
                         android:gravity="center"
                         android:text="Help &amp;\nFAQ"
                         android:textColor="#86888C"
@@ -142,6 +137,7 @@
                         android:textSize="10sp" />
 
                 </LinearLayout>
+
 
             </androidx.cardview.widget.CardView>
 
