--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -153,7 +153,7 @@
                                     android:id="@+id/deliveryAddress"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Airport Rd - \nGarhoud - Dubai - United Arab Emirates"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textFontWeight="600"
                                     android:textSize="10sp" />
@@ -289,7 +289,6 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="21dp"
@@ -470,7 +469,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:visibility="gone"
+
                         android:id="@+id/uploadInvoiceHelpText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -482,7 +481,7 @@
                         android:textSize="8sp" />
 
                     <LinearLayout
-                        android:visibility="gone"
+
                         android:id="@+id/uploadInvoiceButtonLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -873,7 +872,7 @@
                         app:tabIndicatorColor="#3A5FD8"
                         app:tabIndicatorHeight="1dp"
                         app:tabSelectedTextColor="#3A5FD8"
-                        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+                        app:tabTextAppearance="@style/MineCustomTabText"
                         app:tabTextColor="@color/black">
 
 
@@ -884,7 +883,7 @@
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewPagerShipment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="500dp" />
 
 
             </com.google.android.material.card.MaterialCardView>
