--- a/app/src/main/res/layout/fragment_shipment_listing.xml
+++ b/app/src/main/res/layout/fragment_shipment_listing.xml
@@ -6,9 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Shipment.ShipmentFragment.ShipmentListingFragment">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
@@ -86,5 +90,5 @@
 
 
     </LinearLayout>
-
+    </androidx.core.widget.NestedScrollView>
 </FrameLayout>
