--- a/app/src/main/res/layout/fragment_shipment_updates.xml
+++ b/app/src/main/res/layout/fragment_shipment_updates.xml
@@ -1,21 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Shipment.ShipmentFragment.ShipmentTabLayout.ShipmentUpdates">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        android:orientation="vertical">
 
-
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/shipmentUpdateRecycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="13dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
+            />
 
-        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="29dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="13dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="24dp">
+
+        <EditText
+            android:id="@+id/shipmentCommentEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/order_update_comment_box"
+            android:hint="Enter Your Query Here"
+            android:paddingVertical="14dp"
+            android:paddingLeft="13dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/hint_color"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:boxStrokeColor="@color/box_background_color" />
+
+        <ImageView
+            android:id="@+id/shipmentCommentSendBtn"
+            android:layout_width="43dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="6dp"
+            android:src="@drawable/send_button" />
 
 
+    </LinearLayout>
 
-
-</FrameLayout>
+</RelativeLayout>
