shipment api done before merging

--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -469,7 +469,7 @@
                     </LinearLayout>
 
                     <TextView
-
+                        android:visibility="gone"
                         android:id="@+id/uploadInvoiceHelpText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -481,17 +481,18 @@
                         android:textSize="8sp" />
 
                     <LinearLayout
-
                         android:id="@+id/uploadInvoiceButtonLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="24dp">
                         <androidx.cardview.widget.CardView
+                            android:visibility="gone"
                             android:id="@+id/cancelShipmentBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
+                            android:layout_marginRight="20dp"
                             android:clickable="true"
                             app:cardCornerRadius="5dp">
 
@@ -509,6 +510,7 @@
 
                         </androidx.cardview.widget.CardView>
                         <com.google.android.material.button.MaterialButton
+                            android:visibility="gone"
                             android:id="@+id/uploadInvoiceBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
@@ -518,7 +520,6 @@
                             android:paddingVertical="8dp"
                             android:layout_marginBottom="10dp"
                             app:cornerRadius="5dp"
-                            android:layout_marginLeft="20dp"
                             app:backgroundTint="#17B28F"
                             android:text="Upload Invoice"
                             android:textAllCaps="false"
