--- a/app/src/main/res/layout/pricing_table_pop_up.xml
+++ b/app/src/main/res/layout/pricing_table_pop_up.xml
@@ -136,6 +136,7 @@
                         android:textColor="@color/black"/>
 
                     <TextView
+                        android:id="@+id/currency"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="(in USD)*"
