--- a/app/src/main/res/layout/fragment_shipment_details.xml
+++ b/app/src/main/res/layout/fragment_shipment_details.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Shipment.ShipmentFragment.ShipmentTabLayout.ShipmentDetails">
-
 
 
     <LinearLayout
@@ -13,19 +12,69 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="vertical"
+            android:id="@+id/secondRecycle">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/all_spnner_bg">
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/boxSpinner"
+                        style="@style/MySpinner"
+                        android:layout_width="92dp"
+                        android:layout_height="26dp"
+                        android:layout_marginRight="-15dp"
+                        android:background="@null"
+                        android:dropDownWidth="92dp"
+                        android:overlapAnchor="false"
+                        android:textAlignment="center"
+                        android:textSize="12sp" />
+
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/triangle" />
+
+
+                </LinearLayout>
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/boxRecycle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shipmentDetailsRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="50dp"
             android:layout_marginBottom="20dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 
     </LinearLayout>
-
 
 
 </FrameLayout>
